# Exercises

./: README.md
camera_control/: CMakeLists.txt  readme.md
camera_control/configuration/: camera_config.json
camera_control/include/: Camera.h  Configurations.h  HikCamera.h  HikSDKManager.h  MainController.h  MessageListener.h  Utility.h  json.hpp  logger.h
camera_control/src/: Camera.cpp  Configurations.cpp  HikCamera.cpp  MainController.cpp  MessageListener.cpp  logger.cpp  main.cpp
client_server_events/: extract_hex.py  hex_client.py  hex_server.py
client_server_events/data_test/: test0.txt
cordic/magtitude_phase/: cordic_mag_pha_test.py
fpga_gpio/: Makefile  fpga_gpio.c  gpio.c  gpio.h
linux_service_deployment/: camera.service
memory_test/: test_mem_data.py
nn_logicgate/: main.c  util.c  util.h
polynomial_regression/: polynomial_regression.py
process_files_py/: process_sqlite.py  readme.md
signal_processing_tools/: signal_generate_file.py  signal_processing_starter.py  wave_file_analysis.py
spsc_lock_free_queue/: lock_free_queue.c
threads_monitor/: monitor_threads.sh  readme.txt
